src/os/bluestore/BlockDevice.h
@@ -180,7 +180,7 @@ public:
     return conventional_region_size;
   }
 
-  virtual void aio_submit(IOContext *ioc) = 0;
+  virtual void aio_submit(IOContext *ioc, bool check_if_should_wait) = 0;
 
   void set_no_exclusive_lock() {
     lock_exclusive = false;
